Ajout page détail d'un article

--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -15,7 +15,7 @@
 
             <article class='article'>
                 <h2>{{ article.title }}</h2>
-                <a href='/articles/{{ article.id }}/'>
+                <a href='/{{ article.id }}/'>
                     Voir l'article
                 </a>
             </article>
