Résolution d'un problème qui affichait l'image d'un article à côté des tags

--- a/articles/templates/articles/detail.html
+++ b/articles/templates/articles/detail.html
@@ -14,8 +14,8 @@
         {% for tag in article.tags.all %}
             <small>#{{ tag.name }}</small>
         {% endfor %}
-        
-        <img src='{{ article.image }}'/>
+
+        <p><img src='{{ article.image }}'/></p>
         <p>{{ article.text }}</p>     
     </article>
 
