--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'articles/style.css' %}">
     <title>Articles</title>
 </head>
 <body>
     <h1>Les articles</h1>
 
     {% if articles %}
+    <section class='articles'>
 
         {% for article in articles %}
 
@@ -21,6 +24,7 @@
             </article>
 
         {% endfor %}
+    </section>
 
     {% else %}
         <p>Aucun article n'a été trouvé.</p>
