--- a/articles/templates/articles/detail.html
+++ b/articles/templates/articles/detail.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'articles/style.css' %}">
     <title>Détail d'un article</title>
 </head>
 <body>
 
-    <article>
+    <article class='article-detail'>
         <h1>{{ article.title }}</h1>
 
         {% for tag in article.tags.all %}
-            <small>#{{ tag.name }}</small>
+            <small class='tag'>#{{ tag.name }}</small>
         {% endfor %}
 
-        <p><img src='{{ article.image }}'/></p>
-        <p>{{ article.text }}</p>     
+        <p><img src='{{ article.image }}' alt='{{ article.title }}'/></p>
+        <p class='article-text'>{{ article.text }}</p>     
     </article>
 
     <a href='/'>Retour à la liste des articles</a>
